# nix-cuda-baseline

./: flake.nix  template.txt  test-all-nix-binary-cache-compression-levels.sh
.github/actions/nix-setup/: action.yml
.github/scripts/markdown_formatter/: __main__.py  pyproject.toml
.github/scripts/markdown_formatter/markdown_formatter/: size.py  time.py
.github/scripts/markdown_formatter/markdown_formatter/apps/: conda.py  docker.py  nix_binary_cache.py  nix_store.py
.github/scripts/markdown_formatter/markdown_formatter/generic/: markdown.py  markdown_size_time.py  markdown_table.py
.github/workflows/: main.yaml
nix/: config.nix  default.nix  options.nix
nix/apps/: default.nix  pytorch-conda-size.nix  pytorch-docker-image-size.nix  pytorch-nix-binary-cache-size.nix  pytorch-nix-store-size.nix  time-template.txt
nix/devShells/: default.nix
